[update] ハッシュタグの調整

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ exclude:
   - README.md
   - vendor
 google_analytics:
-hashtag: neko
+hashtag: rikuchanfm
 itunes_podcast_url:
 spotify_podcast_url: https://open.spotify.com/show/7M5Tsl9huKXljMOjTgATce
 keywords: comma,separated,keywords
