--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ exclude:
   - vendor
 google_analytics:
 hashtag: rikuchanfm
-itunes_podcast_url:
+itunes_podcast_url: https://podcasts.apple.com/jp/podcast/rikuchan-fm/id1551545808
 spotify_podcast_url: https://open.spotify.com/show/7M5Tsl9huKXljMOjTgATce
 keywords: comma,separated,keywords
 language: ja
